<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">  
    
    
    <!-- Map -->
    <item android:id="@+id/action_map"
          android:title="@string/map_txt"
          android:icon="@drawable/map_marker"
          android:showAsAction="ifRoom"/>
    
    <!-- Action Connect to Server -->
    <item android:id="@+id/action_connect"
          android:icon="@drawable/hardware_server_uncon"
          android:title="@string/ac_connect"
          android:showAsAction="ifRoom"/>
    
    <item android:id="@+id/action_change_server"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/changeServer"
          android:showAsAction="ifRoom" />
      
    <!-- Set my number (1,2) if there are more clients  -->
    <item android:id="@+id/action_settings"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/action_settings"
          android:showAsAction="never" />
    
</menu>
