<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="298dp"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/buttonMovRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonMovFV"
            android:layout_toRightOf="@+id/buttonMovFV"
            android:background="@drawable/effects_right_arrow" />

        <Button
            android:id="@+id/buttonMovBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonMovRight"
            android:layout_toLeftOf="@+id/buttonMovRight"
            android:layout_toRightOf="@+id/buttonMovLeft"
            android:background="@drawable/effects_back_arrow" />

        <TextView
            android:id="@+id/textMove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/movement"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonMovLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/buttonMovFV"
            android:background="@drawable/effects_left_arrow" />

        <Button
            android:id="@+id/buttonMovFV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonMovLeft"
            android:layout_centerHorizontal="true"
            android:background="@drawable/effects_fv_arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/TextRotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="left|center_vertical"
            android:text="@string/rotate"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="left|center_vertical"
            android:text="@string/action_button" />

        <Button
            android:id="@+id/quit_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/quit" />

        <Button
            android:id="@+id/buttonRotRight"
            android:layout_width="80sp"
            android:layout_height="40sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24dp"
            android:background="@drawable/effects_rot_right"
            android:gravity="left|center_vertical" />

        <Button
            android:id="@+id/buttonRotLeft"
            android:layout_width="80sp"
            android:layout_height="40sp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/buttonRotDown"
            android:background="@drawable/effects_rot_left"
            android:gravity="left|center_vertical" />

        <Button
            android:id="@+id/buttonRotUP"
            android:layout_width="40sp"
            android:layout_height="80sp"
            android:layout_above="@+id/buttonRotRight"
            android:layout_toLeftOf="@+id/buttonRotRight"
            android:background="@drawable/effects_rot_up"
            android:gravity="left|center_vertical" />

        <Button
            android:id="@+id/buttonRotDown"
            android:layout_width="40sp"
            android:layout_height="80sp"
            android:layout_below="@+id/buttonRotRight"
            android:layout_toLeftOf="@+id/buttonRotRight"
            android:background="@drawable/effects_rot_down"
            android:gravity="left|center_vertical" />

    </RelativeLayout>

</RelativeLayout>