<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
   	android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/intensity_left_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="6sp"
                android:layout_toLeftOf="@+id/intensity_left_4"
                android:src="@drawable/intensity_5" />

            <ImageView
                android:id="@+id/intensity_left_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="6sp"
                android:layout_toLeftOf="@+id/intensity_left_3"
                android:src="@drawable/intensity_4" />

            <ImageView
                android:id="@+id/intensity_left_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="6sp"
                android:layout_toLeftOf="@+id/intensity_left_2"
                android:src="@drawable/intensity_3" />

            <ImageView
                android:id="@+id/intensity_left_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="6sp"
                android:layout_toLeftOf="@+id/intensity_left_1"
                android:src="@drawable/intensity_2" />

            <ImageView
                android:id="@+id/intensity_left_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20sp"
                android:src="@drawable/intensity_1" />

            <TextView
                android:id="@+id/introduce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/left"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/intensity_right_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6sp"
                android:layout_toRightOf="@+id/intensity_right_4"
                android:src="@drawable/intensity_5" />

            <ImageView
                android:id="@+id/intensity_right_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6sp"
                android:layout_toRightOf="@+id/intensity_right_3"
                android:src="@drawable/intensity_4" />

            <ImageView
                android:id="@+id/intensity_right_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6sp"
                android:layout_toRightOf="@+id/intensity_right_2"
                android:src="@drawable/intensity_3" />

            <ImageView
                android:id="@+id/intensity_right_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6sp"
                android:layout_toRightOf="@+id/intensity_right_1"
                android:src="@drawable/intensity_2" />

            <ImageView
                android:id="@+id/intensity_right_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20sp"
                android:src="@drawable/intensity_1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/right"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/action_button_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="left|center_vertical"
        android:text="@string/action_button" />

</RelativeLayout>